# task_tracker

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  prova_3.json  run.sh  tree.txt
include/: TaskManager.h  TaskStructure.h  string_management.h
json_lib/: CMakeLists.txt  json_lib.cpp  json_lib.h
src/: CMakeLists.txt  TaskManager.cpp  main.cpp
